force-app/main/default/objects/aos_OneDrive_File__c/aos_OneDrive_File__c.object-meta.xml
<CustomObject>
    <label>OneDrive File</label>
    <nameField>
        <label>OneDrive File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneDrive Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>