force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_Animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>OneDrive Files</relationshipLabel>
    <relationshipName>OneDrive_Files</relationshipName>
    <type>Lookup</type>
</CustomField>