force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_Case__c.field-meta.xml
<CustomField>
    <fullName>aos_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>OneDrive Files</relationshipLabel>
    <relationshipName>OneDrive_Files</relationshipName>
    <type>Lookup</type>
</CustomField>