force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_File_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_File_ID__c</fullName>
    <label>File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>