force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_File_Link__c.field-meta.xml
<CustomField>
    <fullName>aos_File_Link__c</fullName>
    <label>File Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>