force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>