force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>aos_Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>