force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>aos_Profile_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Image</label>
    <type>Checkbox</type>
</CustomField>