force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>aos_Thumbnail_URL__c</fullName>
    <label>Thumbnail URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>