force-app/main/default/objects/aos_OneDrive_File__c/fields/aos_Web_URL__c.field-meta.xml
<CustomField>
    <fullName>aos_Web_URL__c</fullName>
    <label>Web URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>